--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -6,8 +6,15 @@ body {
   background-color: #c1c1c1;
   font-size: 14px;
 }
+.logo {
+  height: 50px;
+  max-width: 100%;
+}
 .menubar {
   background-color: #ffffff;
+}
+.logo-footer {
+  height: 100px;
 }
 .about-section,
 .product-section {
@@ -108,6 +115,9 @@ a.nav-link.active {
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+  .logo {
+    height: 80px;
+  }
   .about-section {
     padding: 84px 60px 112px;
   }
@@ -212,6 +222,9 @@ a.nav-link.active {
   }
   .container {
     max-width: 1320px !important;
+  }
+  .logo-footer {
+    height: auto;
   }
 }
 
