--- a/assets/styles/util.css
+++ b/assets/styles/util.css
@@ -40,22 +40,22 @@ h2 {
 }
 .h3,
 h3 {
-  font-size: 28px !important;
+  font-size: 18px !important;
 }
 .h4,
 h4 {
-  font-size: 24px !important;
+  font-size: 16px !important;
 }
 .h5,
 h5 {
-  font-size: 22px !important;
+  font-size: 14px !important;
 }
 .h6,
 h6 {
-  font-size: 20px !important;
+  font-size: 14px !important;
 }
 p {
-  font-size: 28px !important;
+  font-size: 18px !important;
   color: #494949 !important;
 }
 .bg-infohome {
@@ -68,6 +68,25 @@ p {
 
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+  .h3,
+  h3 {
+    font-size: 20px !important;
+  }
+  .h4,
+  h4 {
+    font-size: 18px !important;
+  }
+  .h5,
+  h5 {
+    font-size: 16px !important;
+  }
+  .h6,
+  h6 {
+    font-size: 14px !important;
+  }
+  p {
+    font-size: 20px !important;
+  }
 }
 
 /* // Large devices (desktops, 992px and up) */
@@ -89,5 +108,26 @@ p {
   }
   .welcome {
     font-size: 67px;
+  }
+
+  .h3,
+  h3 {
+    font-size: 28px !important;
+  }
+  .h4,
+  h4 {
+    font-size: 24px !important;
+  }
+  .h5,
+  h5 {
+    font-size: 22px !important;
+  }
+  .h6,
+  h6 {
+    font-size: 20px !important;
+  }
+  p {
+    font-size: 28px !important;
+    color: #494949 !important;
   }
 }
