--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -6,6 +6,9 @@ body {
   background-color: #c1c1c1;
   font-size: 14px;
 }
+.blue-section .h5 {
+  font-size: 20px !important;
+}
 .logo {
   height: 50px;
   max-width: 100%;
@@ -115,6 +118,9 @@ a.nav-link.active {
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+  .blue-section .h5 {
+    font-size: 22px !important;
+  }
   .logo {
     height: 80px;
   }
